--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-icons": "^4.10.1",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
